# cpptemplate

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: CodeCoverage.cmake
include/cpptemplate/: dummy.hpp
src/: CMakeLists.txt  dummy.cpp
test/: CMakeLists.txt  dummy.cpp
